syntax = "proto3";

service Common {
  rpc WalletBalance(WalletBalanceRequest) returns (WalletBalanceResponse) {}
  rpc NewAddress(NewAddressRequest) returns (NewAddressResponse) {}
}

message WalletBalanceRequest {}
message WalletBalanceResponse {
  uint64 balance = 1;
}

message NewAddressRequest {}
message NewAddressResponse {
    string address = 1;
}